Enhance accessibility and fix newline in index.html
Added aria-label for better accessibility and ensured newline at the end of the file.

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,7 +24,7 @@
             <li><a href="#services">Services</a></li>
             <li><a href="#about">About</a></li>
         </ul>
-        <button id="theme-toggle" class="theme-btn">
+        <button id="theme-toggle" class="theme-btn" aria-label="Toggle Dark Mode">
             <i class="fa-solid fa-moon"></i>
         </button>
     </nav>
@@ -116,4 +116,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
