Fix HTML structure and remove unnecessary spans

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -24,7 +24,7 @@
             <li><a href="#services">Services</a></li>
             <li><a href="#about">About</a></li>
         </ul>
-        <button id="theme-toggle" class="theme-btn" aria-label="Toggle Dark Mode">
+        <button id="theme-toggle" class="theme-btn">
             <i class="fa-solid fa-moon"></i>
         </button>
     </nav>
@@ -42,15 +42,12 @@
                 <div class="contact-glass-grid">
                     <a href="https://wa.me/201027645929" target="_blank" class="glass-icon-card">
                         <i class="fa-brands fa-whatsapp"></i>
-                        <span>WhatsApp</span>
                     </a>
                     <a href="mailto:ashraf.191998@icloud.com" class="glass-icon-card">
                         <i class="fa-solid fa-envelope"></i>
-                        <span>Email</span>
                     </a>
                     <a href="https://www.linkedin.com/in/ashraf-hassan98/" target="_blank" class="glass-icon-card">
                         <i class="fa-brands fa-linkedin-in"></i>
-                        <span>LinkedIn</span>
                     </a>
                 </div>
             </div>
@@ -116,5 +113,4 @@
 
     <script src="script.js"></script>
 </body>
-
 </html>
