Fix image source for ZAD Electric logo

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -98,7 +98,7 @@
         <h2 class="section-title">Featured Projects</h2>
         <div class="project-card">
             <div class="project-img-box">
-                <img src="zad-logo.jpg" alt="ZAD Electric Logo">
+              <img src="zad-logo.jpg.jpg" alt="ZAD Electric Logo">
             </div>
             <div class="project-info">
                 <h3>ZAD Electric — ERP</h3>
