Update project details for ZAD Electric

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -111,12 +111,15 @@
               <img src="zad-logo.jpg.jpg" alt="ZAD Electric Logo">
             </div>
             <div class="project-info">
-                <h3>ZAD Electric — ERP</h3>
-                <p>Full deployment of Accounting, Inventory, and Sales modules on Odoo Cloud.</p>
+                <h3>ZAD ELECTRIC </h3>
+                <p>Full implementation of ( accounting, inventory, sales and purchasing ) modules on Odoo Cloud.</p>
+                  <p>Preparing the chart of accounts.</p>
+                 <p>Raising opening balances and adjusting inventory and categories.</p>
+                <p>Training for 2 accountants.</p>
+              
                 <ul class="tags">
-                    <li>Odoo v18</li>
-                    <li>Accounting</li>
-                    <li>Supply Chain</li>
+                    <li>Odoo V. 19</li>
+                    
                 </ul>
             </div>
         </div>
