Update hero section description in index.html

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -94,7 +94,7 @@
         <div class="hero-content">
             <span style="color:var(--accent); font-weight: 600;">Odoo Implementer</span>
             <h1 class="hero-name">Ashraf Hassan</h1>
-            <p>Bridging the gap between Accounting and Technology.</p>
+            <p>Command Your Company from Anywhere: Transforming Chaos into Professional Order with Odoo Excellence</p>
             <div class="contact-glass-grid">
                 <a href="https://wa.me/201027645929" target="_blank" class="glass-icon-card"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="mailto:ashraf.191998@icloud.com" class="glass-icon-card"><i class="fa-solid fa-envelope"></i></a>
