Update title and descriptions in index.html

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ashraf Hassan | Odoo ERP Expert</title>
+    <title>Ashraf Hassan | Odoo Implementer</title>
 
-    <meta property="og:title" content="Ashraf Hassan | Odoo ERP Specialist">
+    <meta property="og:title" content="Ashraf Hassan | Odoo ERP ">
     <meta property="og:description" content="Command Your Company from Anywhere. Expert Odoo implementation and financial strategy.">
     <meta property="og:image" content="https://ashraf-erp.github.io/ashraf-odoo-portfolio/portfolio/ashraf.png">
     <meta property="og:url" content="https://ashraf-erp.github.io/ashraf-odoo-portfolio/portfolio/">
@@ -51,7 +51,7 @@
         <div class="hero-content">
             <span style="color:var(--accent); font-weight: 600; text-transform: uppercase;">Odoo Implementer</span>
             <h1 class="hero-name">Ashraf Hassan</h1>
-            <p class="hero-p"><strong>Command Your Company from Anywhere.</strong> Transforming Chaos into Professional Order with Odoo Excellence and Strategic Financial Workflows.</p>
+            <p class="hero-p"><strong>Command Your Company from Anywhere.</strong> Transforming Chaos into Professional Order with Odoo Excellence and Strategic Financial </p>
             <div class="contact-glass-grid">
                 <a href="https://wa.me/201027645929" target="_blank" class="glass-icon-card"><i class="fa-brands fa-whatsapp"></i></a>
                 <a href="mailto:ashraf.191998@icloud.com" class="glass-icon-card"><i class="fa-solid fa-envelope"></i></a>
@@ -64,7 +64,7 @@
     </section>
 
     <section id="projects" class="section">
-        <h2 class="section-title">Featured Projects</h2>
+        <h2 class="section-title"> Projects</h2>
         <div class="project-card">
             <div class="project-img-box">
                 <img src="zad-logo.jpg.jpg" alt="ZAD Electric Logo">
